--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -33,6 +33,9 @@ http {
 	# Gzip Settings
 	gzip on;
 	gzip_disable "msie6";
+	gzip_comp_level 6;
+	gzip_vary on;
+	gzip_types text/plain text/css application/json application/x-javascript application/javascript text/xml application/xml application/rss+xml text/javascript image/svg+xml application/vnd.ms-fontobject application/x-font-ttf font/opentype;
 
 	# Virtual Host Configs
 	include /etc/nginx/sites-enabled/*;
