--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -48,7 +48,7 @@ traefik:
 
 # Configure a custom healthcheck (default is /up on port 3000)
 healthcheck:
-  cmd: /bin/true
+  enabled: false
 
 # Bridge fingerprinted assets, like JS and CSS, between versions to avoid
 # hitting 404 on in-flight requests. Combines all files from new and old
